istio/fault-injection/shipping-dr.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs.shipping
spec:
  hosts:
  - shipping
  http:
  - route:
    - destination:
        host: shipping
        subset: v1
    fault:
      abort:
        percentage:
          value: 25.0
        httpStatus: 503
      delay:
        fixedDelay: 5s
        percent: 10
